--- a/compiladorJava/templates/index.html
+++ b/compiladorJava/templates/index.html
@@ -1,16 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html >
 <head>
   <meta charset="UTF-8">
   <title>Vertical Layout with Navigation</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link href="{% static 'https://fonts.googleapis.com/css?family=Montserrat' %}" rel="stylesheet">
 
 <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel="stylesheet" href="{% static 'https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css' %}">
 
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
   
 </head>
@@ -73,12 +74,12 @@
     </div>
   </article>
 </section>
-<a href="http://ettrics.com/code/vertical-layout-navigation/" class="logo" target="_blank">
+<a href="{% static 'http://ettrics.com/code/vertical-layout-navigation/' %}" class="logo" target="_blank">
  <img class="logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/45226/ettrics-logo.svg" alt="" /> 
 </a>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-    <script src="js/index.js"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 
 </body>
 </html>
